--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,14 +1,13 @@
 h1 {color: blueviolet;
-    
     font-family: "Julius Sans One", sans-serif;
     font-weight: 400;
     font-style: normal;
   }
   
-p { 
+h2 { 
 font-family: "Lato", sans-serif;
 font-weight: 300;
 font-style: normal;}     
 
 
-  
+body {background-color: aqua;}
