--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,8 +1,10 @@
-h1 {color: blueviolet;
-    font-family: "Julius Sans One", sans-serif;
-    font-weight: 400;
+h1 {color: black;
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 700;
     font-style: normal;
-  }
+    font-size: 500px;
+      }
+    
   
 h2 { 
 font-family: "Lato", sans-serif;
@@ -11,3 +13,22 @@ font-style: normal;}
 
 
 body {background-color: #fffeef;}
+
+.nav-link {color: black;
+font-size: 20px;}
+
+.navbar-brand {padding-left: 20px;
+padding-right: 20px;}
+
+.amatic-sc-regular {
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .amatic-sc-bold {
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
