--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,9 +29,10 @@ font-weight: 300;
 font-style: normal;}     
 
 
-body {background-color: #fffeef;}
+body {background-color: var(--background-color--)}
 
 .hero {text-align: center;}
+
 
 
 /* fonts */
