--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,24 @@ body {background-color: var(--background-color--)}
 
 .hero {text-align: center;}
 
+.circle {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  
+}
+
+.circle-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
 
 
 /* fonts */
