--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -35,6 +35,11 @@ body {background-color: var(--background-color--)}
 .hero {text-align: center;
 margin-top: 100px;}
 
+.skills {
+  margin-top: 150px;
+  margin-bottom: 170px;
+}
+
 .circle {
   width: 300px;
   height: 300px;
@@ -52,18 +57,15 @@ margin-top: 100px;}
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
+  transition: transform 0.3s ease; /* Adds a zoom effect */
 }
 
-.skills {
-  margin-top: 150px;
-  margin-bottom: 170px;
-}
 
 /* Circle Button Styling */
 .circle-button {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 300px;
   border: none;
   padding: 0;
   border-radius: 50%;
@@ -73,13 +75,6 @@ margin-top: 100px;}
   outline: none;
 }
 
-.circle-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  transition: transform 0.3s ease; /* Adds a zoom effect */
-}
 
 .circle-button:hover .circle-image {
   transform: scale(1.1); /* Slight zoom on hover */
@@ -91,9 +86,9 @@ margin-top: 100px;}
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 1.2rem;
+  font-family: var(--heading-font--);
+  font-size: 80px;
   font-weight: bold;
-  text-transform: uppercase;
   opacity: 0;
   transition: opacity 0.3s ease; /* Smooth fade-in on hover */
   z-index: 2; /* Ensures text appears on top */
