--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -73,19 +73,24 @@ margin-top: 100px;}
   background: none;
   cursor: pointer;
   outline: none;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); 
+    transition: box-shadow 0.3s ease;
 }
 
 
 .circle-button1:hover .circle-image {
   transform: scale(1.1); 
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
 }
 
 .circle-button2:hover .circle-image {
   transform: scale(1.1); 
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
 }
 
 .circle-button3:hover .circle-image {
   transform: scale(1.1); 
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -110,7 +115,7 @@ margin-top: 100px;}
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--brand-color--);
+  background-color: var(--light-accent--);
   opacity: 0;
   border-radius: 50%;
   transition: opacity 0.3s ease; 
@@ -124,7 +129,7 @@ margin-top: 100px;}
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--light-accent--);
+  background-color: var(--brand-color--);
   opacity: 0;
   border-radius: 50%;
   transition: opacity 0.3s ease; 
@@ -158,11 +163,11 @@ margin-top: 100px;}
 
 .circle-button1:hover .circle-text {
   opacity: 1; 
+  color: #001e02;
 }
 
 .circle-button2:hover .circle-text {
   opacity: 1; 
-  color: #001e02;
 }
 .circle-button3:hover .circle-text {
   opacity: 1; 
